Scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 
 html {
   -webkit-tap-highlight-color: transparent;
-  scrollbar-gutter: stable;
   overflow-x: hidden;
 }
 
